--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="yusef mohey">
     <meta name="description" content="DEV-CORE - Learn programming and technology skills with high-quality, affordable courses">
     <link rel="stylesheet" href="/dev-core/forntemd/css/style.css">
+    <script src= "index.js"></script>
     <title>DEV-CORE - Learn Programming & Technology</title>
 </head>
 
@@ -147,7 +148,7 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="inedx.html">Home</a></li>
+                    <!-- <li><a href="inedx.html">Home</a></li> -->
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="roadmap.html">Roadmap</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
