--- a/admin_panel.html
+++ b/admin_panel.html
@@ -7,6 +7,7 @@
     <meta name="author" content="yusef mohey">
     <link rel="stylesheet" href="/dev-core/forntemd/css/style.css">
     <title>Admin Panel - DEV-CORE</title>
+    <script src = "admin.js"></script>
 </head>
 
 <body>
