--- a/admin_panel.html
+++ b/admin_panel.html
@@ -15,7 +15,7 @@
         <h1>Admin Panel</h1>
         <p>Manage your platform and users</p>
         <ul>
-            <li><a href='inedx.html'>Home</a></li>
+            <li><a href='index.html'>Home</a></li>
             <li><a href='dashboard.html'>Dashboard</a></li>
             <li><a href='admin_panel.html'>Admin Panel</a></li>
         </ul>
