--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <h1>Welcome Back</h1>
         <p>Login to continue your learning journey</p>
         <ul>
-            <li><a href='inedx.html'>Home</a></li>
+            <li><a href='index.html'>Home</a></li>
             <li><a href='login.html'>Login</a></li>
             <li><a href='signup.html'>Sign Up</a></li>
         </ul>
