--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
         <h1>Create Your Account</h1>
         <p>Join DEV-CORE and start your learning journey</p>
         <ul>
-            <li><a href='inedx.html'>Home</a></li>
+            <li><a href='index.html'>Home</a></li>
             <li><a href='login.html'>Login</a></li>
             <li><a href='signup.html'>Sign Up</a></li>
         </ul>
@@ -92,7 +92,6 @@
         </ul>
     </footer>
 
-    <script src="/dev-core/forntemd/js/auth.js"></script>
     <style>
         /* ===== GLOBAL STYLE ===== */
         * {
@@ -396,6 +395,7 @@
             }
         }
     </style>
+    <script src="/dev-core/forntemd/js/auth.js"></script>
 </body>
 
 </html>
