--- a/login.html
+++ b/login.html
@@ -66,9 +66,9 @@
 
     <footer id="footer">
         <ul>
-            <li><a target="_blank" href="mailto:devcore.communicate@gmail.com">email</a></li>
-            <li><a target="_blank" href="tel:+966359797419">telphone</a></li>
-            <li><a target="_blank" href="https://www.instagram.com/dev.core.egy">insta</a></li>
+            <li><a target="_blank" href="mailto:devcore.communicate@gmail.com">Email</a></li>
+            <li><a target="_blank" href="tel:+966359797419">Telephone</a></li>
+            <li><a target="_blank" href="https://www.instagram.com/dev.core.egy">Instagram</a></li>
         </ul>
     </footer>
 
