--- a/admin_panel.html
+++ b/admin_panel.html
@@ -27,7 +27,7 @@
                 <div class="stat-icon">👥</div>
                 <div class="stat-info">
                     <h3>Total Users</h3>
-                    <p class="stat-number">1,234</p>
+                    <p class="stat-number">0</p>
                     <span class="stat-change positive">+12% this month</span>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <div class="stat-icon">📚</div>
                 <div class="stat-info">
                     <h3>Total Courses</h3>
-                    <p class="stat-number">24</p>
+                    <p class="stat-number">0</p>
                     <span class="stat-change positive">+3 new</span>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <div class="stat-icon">💰</div>
                 <div class="stat-info">
                     <h3>Revenue</h3>
-                    <p class="stat-number">$45,678</p>
+                    <p class="stat-number">0.00LE</p>
                     <span class="stat-change positive">+8% this month</span>
                 </div>
             </div>
