--- a/roadmap.html
+++ b/roadmap.html
@@ -1,20 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>roadmap dev-core </title>
+  <meta charset="UTF-8">
+  <title>Roadmap | DevCore</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    /* ===== GLOBAL ===== */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
+
+    body {
+      background: #0d0d0d;
+      color: #fff;
+      min-height: 100vh;
+    }
+
+    /* ===== HEADER ===== */
+header {
+  background: linear-gradient(135deg, #6a25ff, #3c0a99);
+  padding: 40px 20px 30px;
+  text-align: center;
+  border-bottom: 2px solid #8f44ff;
+}
+
+    /* ===== PAGE TITLE ===== */
+    .page-title {
+      font-size: 3rem;
+      color:#FFFFFF;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .page-subtitle {
+      font-size: 1.2rem;
+      opacity: 0.8;
+      margin-bottom: 20px;
+    }
+
+    .main-nav {
+      margin-top: 10px;
+    }
+
+    .main-nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+
+    .main-nav ul li a {
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s ease;
+      font-weight: 500;
+      display: inline-block;
+    }
+
+    .main-nav ul li a:hover,
+    .main-nav ul li a.active {
+      background: rgba(255, 255, 255, 0.2);
+      transform: translateY(-2px);
+    }
+
+    /* ===== COMING SOON CENTER ===== */
+    .coming-container {
+      height: calc(100vh - 220px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .coming-text {
+      font-size: 64px;
+      font-weight: bold;
+      color: #8f44ff;
+      letter-spacing: 3px;
+      animation: glow 1.5s infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px #8f44ff;
+      }
+      to {
+        text-shadow: 0 0 30px #8f44ff;
+      }
+    }
+
+    /* ===== RESPONSIVE ===== */
+    @media (max-width: 600px) {
+      .page-title {
+        font-size: 2rem;
+      }
+      .coming-text {
+        font-size: 36px;
+      }
+    }
+  </style>
 </head>
 
 <body>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAG6X6ibM6Q/CaSjtcZUHLCZvA3wXV0icQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-    </div>
-    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG6X6ibM6Q&#x2F;CaSjtcZUHLCZvA3wXV0icQ&#x2F;view?utm_content=DAG6X6ibM6Q&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_self" rel="noopener">ROADMAPS</a>not
-    complete yet</body>
 
+  <!-- ===== HEADER ===== -->
+  <header>
+    <!-- Page Title -->
+    <div class="page-title">Roadmap</div>
+    <div class="page-subtitle">Explore the learning paths and skills you can achieve with DevCore</div>
+
+    <!-- Navbar -->
+    <nav class="main-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="roadmap.html" class="active">Roadmap</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- ===== COMING SOON ===== -->
+  <div class="coming-container">
+    <div class="coming-text">
+      COMING SOON...
+    </div>
+  </div>
+
+</body>
 </html>
