--- a/login.html
+++ b/login.html
@@ -377,16 +377,15 @@
         }
     </style>
     <script src="/dev-core/forntemd/js/auth.js"></script>
-// Show/hide password
+<script>// Show/Hide password
 const passwordInput = document.getElementById('password');
 const showPasswordCheckbox = document.getElementById('showPassword');
 
 if (passwordInput && showPasswordCheckbox) {
     showPasswordCheckbox.addEventListener('change', () => {
-        // لو checked يبقى type = text، لو مش checked type = password
         passwordInput.type = showPasswordCheckbox.checked ? 'text' : 'password';
     });
-}
+}</script> 
 </body>
 
 </html>
