--- a/signup.html
+++ b/signup.html
@@ -255,52 +255,27 @@ transition:0.3s;}
 </div>
 
 <!-- Terms Modal -->
-<div id="termsModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3>Terms and Conditions</h3>
-        <p>
+<div>
+  <p><strong>1. Using Our Services</strong><br>
+  Use our website responsibly and legally. Please don’t:<br>
+  - Break any laws.<br>
+  - Share harmful or offensive content.<br>
+  - Try to access other users’ accounts or our systems without permission.</p>
 
-Terms and Conditions
+  <p><strong>2. Your Account</strong><br>
+  If you create an account, keep your login details safe. You’re responsible for everything that happens under your account. Let us know if it’s compromised.</p>
 
-Welcome to [DEVCORE]. By accessing or using our website or services, you agree to comply with and be bound by the following terms and conditions. Please read them carefully.
+  <p><strong>3. Content and Ownership</strong><br>
+  All content on our site (texts, images, logos) belongs to [DEVCORE]. Don’t copy or use it without our permission.</p>
 
-1. Acceptance of Terms
+  <p><strong>4. Changes and Updates</strong><br>
+  We may update these terms sometimes. Keep using our site means you accept the updated terms.</p>
 
-By using our website, you agree to these Terms and Conditions and our Privacy Policy. If you do not agree, you should not use our services.
+  <p><strong>5. Limitation of Liability</strong><br>
+  We work hard to make our site safe and reliable, but we aren’t responsible for any damages from using it.</p>
 
-2. Use of Services
-
-You agree to use our website only for lawful purposes. You must not:
-
-Violate any applicable laws or regulations.
-
-Post or transmit harmful, offensive, or illegal content.
-
-Attempt to gain unauthorized access to our systems.
-
-
-3. User Accounts
-
-Some services may require registration. You are responsible for maintaining the confidentiality of your account credentials and for all activities under your account. Notify us immediately of any unauthorized use.
-
-4. Intellectual Property
-
-All content, logos, images, and materials on this website are owned by [Your Company Name] or our licensors and are protected by copyright and intellectual property laws. You may not use, reproduce, or distribute them without prior written permission.
-
-5. Termination
-
-We reserve the right to suspend or terminate your access at any time if you violate these terms or engage in prohibited behavior.
-
-6. Limitation of Liability
-
-We are not liable for any direct, indirect, incidental, or consequential damages arising from your use of the website or services.
-
-7. Changes to Terms
-
-We may update these terms from time to time. Your continued use of the website after changes indicates your acceptance of the new terms.
-        </p>
-    </div>
+  <p><strong>6. Ending Access</strong><br>
+  We may suspend or remove your access if you break these rules.</p>
 </div>
 
 <footer id="footer">
