--- a/signup.html
+++ b/signup.html
@@ -417,8 +417,10 @@ form.addEventListener('submit', async e => {
 });
 </script>
 // تحميل التيم من localStorage
+<script> 
 const savedTheme = localStorage.getItem('theme') || 'dark';
 document.documentElement.setAttribute('data-theme', savedTheme);
+</script> 
 
 </body>
 </html>
