--- a/login.html
+++ b/login.html
@@ -299,6 +299,10 @@
         submitBtn.querySelector('.btn-loader').style.display = 'none';
     });
 </script>
-
+// تحميل التيم من localStorage
+<script> 
+const savedTheme = localStorage.getItem('theme') || 'dark';
+document.documentElement.setAttribute('data-theme', savedTheme);
+</script> 
 </body>
 </html>
