--- a/Forget_password.html
+++ b/Forget_password.html
@@ -237,6 +237,10 @@ resetForm.addEventListener('submit', async e => {
     submitBtn.querySelector('.btn-loader').style.display = 'none';
 });
 </script>
-
+// تحميل التيم من localStorage
+<script> 
+const savedTheme = localStorage.getItem('theme') || 'dark';
+document.documentElement.setAttribute('data-theme', savedTheme);
+</script> 
 </body>
               </html>
