--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <script src= "index.js"></script>
     <title>DEV-CORE - Learn Programming & Technology</title>
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="DevCore - Learn Programming" />
-<meta property="og:description" content="منصة DevCore لتعلم البرمجة Web, Games, Software من الصفر للإحتراف" />
-<meta property="og:image" content="https://devcore-main.github.io/cover.jpg" />
-<meta property="og:url" content="https://devcore-main.github.io/" />
+<meta property="og:title" content="DevCore - منصة تعليم البرمجة" />
+<meta property="og:description" content="DevCore أفضل منصة عربية لتعلم البرمجة، تطوير الويب، وصناعة الألعاب من الصفر" />
+<meta property="og:image" content="https://dev-core.site/cover.jpg" />
+<meta property="og:url" content="https://dev-core.site/" />
 <meta property="og:type" content="website" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="DevCore - Learn Programming">
-<meta name="twitter:description" content="منصة DevCore لتعلم البرمجة باحتراف">
-<meta name="twitter:image" content="https://devcore-main.github.io/cover.jpg">
+<meta name="twitter:description" content="تعلم البرمجة وتطوير الويب وصناعة الألعاب من الصفر إلى الاحتراف">
+<meta name="twitter:image" content="https://dev-core.site/cover.jpg">
 </head>
 
 <body>
