--- a/dashboard.html
+++ b/dashboard.html
@@ -851,6 +851,7 @@
         }
     </style>
     
+<script src="../js/dashboard.js"></script>
     <!--Menu Toggle-->
     <script>
         const menuToggle = document.getElementById("menuToggle");
