--- a/admin_panel.html
+++ b/admin_panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/admin_panel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
         <div class="logo-container">
             <div class="logo">
                 <i class="fas fa-shield-alt"></i>
-                <span>CYBER<span class="logo-accent">ADMIN</span></span>
+                <span>DevCore<span class="logo-accent">ADMIN</span></span>
             </div>
         </div>
         
@@ -351,6 +351,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
