--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dev-core/forntemd/css/style.css">
-    <link rel="stylesheet" href="css/courses.css">
+    <link rel="stylesheet" href="courses.css">
     <script defer src="courses.js"></script>
     <title>Courses - DEV-CORE</title>
 </head>
