--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <title>Login - DEV-CORE</title>
   <link rel="stylesheet" href="/dev-core/forntemd/css/style.css">
   <!-- رابط ملف الأنماط المنفصل -->
-  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
